[gd_scene load_steps=3 format=3 uid="uid://cb3fqvfhd0pl3"]

[ext_resource type="Script" path="res://old/Battle.gd" id="1_w47mo"]

[sub_resource type="TextMesh" id="TextMesh_m3w77"]
text = "Battle"

[node name="Battle" type="Node3D"]
script = ExtResource("1_w47mo")

[node name="MarkerPlayer" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.412974, 0, 0)

[node name="MarkerEnemy" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.520134, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("TextMesh_m3w77")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.92412)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 531.0
offset_top = 442.0
offset_right = 578.0
offset_bottom = 473.0
grow_horizontal = 2
grow_vertical = 2
text = "Fight"

[node name="ButtonEscape" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 531.0
offset_top = 486.0
offset_right = 593.0
offset_bottom = 517.0
grow_horizontal = 2
grow_vertical = 2
text = "Escape"

[connection signal="pressed" from="Control/ButtonEscape" to="." method="_on_button_escape_pressed"]
